--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-lg-12">
-					<h1>About Us</h1>
+					<h1>Rreth nesh</h1>
 				</div>
 			</div>
 		</div>
