--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
 
 				<form class="contact100-form validate-form">
 					<span class="contact100-form-title">
-						Na kontaktoni
+						Dërgo mesazhin tuaj
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Ju lutem shkruani emrin tuaj">
@@ -151,10 +151,12 @@
 			</div>
 		</div>
 	</div>
+</div>
+</div>
 	<!-- End Contact -->
 	
 	<!-- Start Contact info -->
-	<div class="contact-imfo-box" style="margin-top: 10%">
+	<div class="contact-imfo-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4 arrow-right">
@@ -241,6 +243,7 @@
 	<!-- End Footer -->
 	
 	<a href="#" id="back-to-top" title="Back to top" style="display: none;"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></a>
+
 
 	<!-- ALL JS FILES -->
 	<script src="js/jquery-3.2.1.min.js"></script>
