--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<li class="nav-item"><a class="nav-link" href="menu.html">Meny</a></li>
 						<li class="nav-item"><a class="nav-link" href="gallery.html">Galeria</a></li>
 						<li class="nav-item"><a class="nav-link" href="contact.html">Kontakti</a></li>
-						<li class="nav-item"><a class="nav-link" href="about.html">Rezervimet</a></li>
+						<li class="nav-item"><a class="nav-link" href="reservation.html">Rezervimet</a></li>
 					</ul>
 				</div>
 			</div>
@@ -552,9 +552,9 @@
 						</form>
 					</div>
 					<ul class="list-inline f-social">
-						<li class="list-inline-item"><a href="www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li class="list-inline-item"><a href="www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li class="list-inline-item"><a href="www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li class="list-inline-item"><a href="https://www.instagram.com/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-6">
@@ -575,7 +575,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<p class="company-name"> &copy; 2021 <a href="www.facebook.com">Salsa Sweets</a> Dizajnuar nga: 
+						<p class="company-name"> &copy; 2021 <a href="https://www.facebook.com/">Salsa Sweets</a> Dizajnuar nga: 
 					Lirikë Qerimi</p>
 					</div>
 				</div>
